# water-flow-esp

./: .gitignore  Cargo.toml  README.md  setup.sh
.devcontainer/: devcontainer.json
firmware/: .env.example  Cargo.toml  README.md
firmware/src/: config.rs  engine.rs  lib.rs  main.rs  mqtt.rs  sensor.rs  time.rs  traits.rs  wifi.rs
firmware/src/platform/: mod.rs  sink.rs  traits.rs
firmware/src/platform/esp32/: clock.rs  connection.rs  delay.rs  mod.rs  mqtt.rs  payload.rs  pulse_counter.rs  sampler.rs  sink.rs  wifi.rs
firmware/src/platform/host/: clock.rs  connection.rs  delay.rs  mod.rs  mqtt.rs  payload.rs  pulse_counter.rs  sampler.rs  sink.rs  wifi.rs
src/: app.rs  buffer_manager.rs  connection_manager.rs  main.rs  main_config.rs  mqtt_manager.rs  sensor.rs  time_manager.rs  timer.rs  wifi_manager.rs
